# mail_syncer

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  deploy.yml
infra/: template.yaml
scripts/: check_latest_deploy.py  create_dynamodb_table.sh  migrate_secrets_to_ssm.py
src/: config.py  deploy_check.py  dynamodb_state.py  gmail_imap.py  imap_utils.py  lambda_handler.py  logging_utils.py  main.py  oauth_gmail.py  oauth_microsoft.py  outlook_imap.py  secrets_config.py  sync_engine.py
tests/: test_config.py  test_deploy_check.py  test_dynamodb_state.py  test_fail_safe.py  test_imap_utils.py  test_main.py  test_secrets_config.py  test_sync_engine.py
