[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-syncer"
version = "0.1.0"
description = "IMAP to IMAP Gmail to Outlook mailbox sync with DynamoDB state"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

